# fantasy_craft

./: Cargo.toml  README.md
editor/src/: main.rs
engine/: Cargo.toml
engine/src/: asset_server.rs  assets.rs  components.rs  context.rs  lib.rs  physics.rs  prelude.rs  schedule.rs  systems.rs  tiled_map.rs
engine/src/audio/: mod.rs
engine/src/camera/camera2d/: components.rs  plugins.rs  systems.rs
engine/src/core/: app.rs  asset_server.rs  context.rs  plugins.rs  schedule.rs
engine/src/graphics/: animations.rs  splash_screen.rs
engine/src/graphics/tiled_map/: components.rs  plugins.rs  systems.rs  tiled_map.rs
engine/src/gui/: alignment.rs  components.rs  font_component.rs  gui_box.rs  gui_button.rs  gui_draggable.rs  gui_element.rs  gui_layout.rs  gui_local_offset.rs  gui_slider.rs  plugins.rs  systems.rs
engine/src/hierarchy/: components.rs  mod.rs  plugins.rs  systems.rs
engine/src/input/: system.rs
engine/src/physics/: components.rs  plugins.rs  systems.rs
engine/src/scene/: scene_format.rs  scene_loader.rs
engine/src/utils/: components.rs  mod.rs
fantasy-craft/: Cargo.toml
fantasy-craft/src/: lib.rs
fantasy-craft/src/audio/: event.rs  plugin.rs  system.rs
fantasy-craft/src/camera/camera2d/: components.rs  systems.rs
fantasy-craft/src/core/: app.rs  asset_server.rs  context.rs  event.rs  mod.rs  plugins.rs  resource.rs  schedule.rs  time.rs  web_context.rs
fantasy-craft/src/graphics/: animations.rs  mod.rs  sprites.rs
fantasy-craft/src/graphics/tiled_map/: mod.rs  plugins.rs  serializers.rs  systems.rs  tiled_map.rs
fantasy-craft/src/gui/: color_data.rs  event.rs  gui_action.rs  gui_checkbox.rs  gui_dimension.rs  gui_image.rs  gui_input_field.rs  mod.rs  resources.rs  text_display.rs
fantasy-craft/src/hierarchy/: plugins.rs
fantasy-craft/src/input/: focus.rs  manager.rs  mod.rs  plugin.rs
fantasy-craft/src/physics/: components.rs  event.rs  helpers.rs  mod.rs  plugins.rs  systems.rs
fantasy-craft/src/scene/: mod.rs  scene_format.rs  scene_loader.rs
fantasy-craft/src/utils/: plugins.rs
game/: Cargo.toml
game/src/: components.rs  main.rs  plugins.rs  systems.rs
resources/: assets.json
resources/editor/: assets.json  scene.json
resources/maps/: fantasy_craft.tiled-session  tests.json
resources/scenes/: dev.json  menu.json  player.json
src/: asset_server.rs  camera.rs  main.rs  systems.rs  tiled_map.rs
(+3 files in other folders)
