[workspace]
resolver = "3"
members = [
    "engine",
    "game",
]

[workspace.dependencies]
macroquad = { version = "0.4.14", features = ["audio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hecs = { version = "0.10.5", features = ["macros"]}
parry2d = "0.25.1"
futures = "0.3"
async-recursion = "1.1.1"
