[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = { workspace = true }
hecs = { workspace = true }
parry2d = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fantasy-craft = { path = "../fantasy-craft" }
async-recursion = { workspace = true }
getrandom = { workspace = true }
